--- a/content/Meeting notes/Weekly sync/2024-11-14 - Paper idea 1.md
+++ b/content/Meeting notes/Weekly sync/2024-11-14 - Paper idea 1.md
@@ -1,7 +1,7 @@
 ---
 title: 2024-11-14 - Paper idea 1
 date: 2024-11-14
-image: /static/background/red_mountain.jpg
+image: ./static/background/red_mountain.jpg
 position: 50% 20%
 tags:
   - Meeting-notes
